clean up project a little for more visibility into changes

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Pure Joy",
+  "name": "Pure Joy for Web Development",
   "icons": [
     {
       "src": "favicon.ico",
