prepare to integrate SSR+SW webpack config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,10 @@
 {
     "extends": "airbnb",
+    "globals": {},
     "parserOptions": {
         "ecmaFeatures": {
             "experimentalObjectRestSpread": true
         }
-    }
+    },
+    "rules": {}
 }
