--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "axios": "^0.16.2",
     "babel-plugin-dynamic-import-webpack": "1.0.1",
     "babel-plugin-transform-decorators-legacy": "1.3.4",
-    "babel-register": "6.24.1",
+    "babel-register": "^6.24.1",
     "bluebird": "^3.5.0",
     "compression": "1.6.2",
     "cors": "2.8.3",
@@ -22,7 +22,7 @@
     "polished": "^1.1.3",
     "preact": "8.1.0",
     "preact-compat": "3.16.0",
-    "prop-types": "15.5.10",
+    "prop-types": "^15.5.10",
     "ramda": "^0.24.1",
     "react": "^15.5.4",
     "react-addons-perf": "15.4.2",
@@ -44,6 +44,7 @@
     "styled-components": "^2.0.1",
     "transducers-js": "^0.4.174",
     "transit": "^0.1.0",
+    "uuid": "^3.1.0",
     "victory": "^0.21.0",
     "webpack": "2.6.1",
     "webpack-dev-middleware": "1.10.2",
@@ -51,22 +52,25 @@
   },
   "devDependencies": {
     "autoprefixer": "7.1.0",
-    "babel-core": "6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
-    "babel-loader": "7.0.0",
+    "babel-loader": "^7.0.0",
     "babel-plugin-dynamic-import-node": "1.0.2",
     "babel-plugin-syntax-dynamic-import": "6.18.0",
     "babel-plugin-transform-class-properties": "6.24.1",
     "babel-plugin-transform-es2015-modules-commonjs": "6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.6.5",
     "babel-preset-env": "1.5.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
     "babel-preset-react": "6.24.1",
     "babel-preset-react-app": "^3.0.0",
+    "babel-preset-stage-2": "^6.24.1",
     "babel-runtime": "6.23.0",
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
-    "css-loader": "0.28.1",
+    "css-loader": "^0.28.4",
     "dotenv": "4.0.0",
     "enzyme": "^2.8.2",
     "enzyme-to-json": "^1.5.1",
@@ -82,49 +86,70 @@
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-prettier": "2.1.1",
     "eslint-plugin-react": "7.0.1",
-    "extract-text-webpack-plugin": "2.1.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "file-loader": "0.11.1",
     "flow-bin": "0.47.0",
     "fs-extra": "3.0.1",
-    "html-webpack-plugin": "2.28.0",
+    "ghooks": "^2.0.0",
+    "html-webpack-plugin": "^2.28.0",
+    "husky": "^0.13.4",
+    "inline-manifest-webpack-plugin": "^3.0.1",
     "jest": "20.0.3",
     "jest-serializer-enzyme": "1.0.0",
     "moxios": "0.4.0",
     "nodemon": "1.11.0",
+    "npm-run-all": "^4.0.2",
     "object-assign": "4.1.1",
+    "offline-plugin": "^4.8.1",
     "postcss-flexbugs-fixes": "3.0.0",
     "postcss-loader": "2.0.5",
     "prettier": "^1.4.4",
+    "progress-bar-webpack-plugin": "^1.9.3",
     "promise": "7.1.1",
     "react-dev-utils": "^3.0.0",
     "react-error-overlay": "^1.0.7",
     "react-hot-loader": "3.0.0-beta.6",
     "react-test-renderer": "^15.5.4",
     "redux-devtools": "^3.4.0",
-    "style-loader": "0.17.0",
+    "rimraf": "^2.6.1",
+    "style-loader": "^0.18.2",
+    "surge": "^0.19.0",
+    "svg-loader": "^0.0.2",
     "sw-precache-webpack-plugin": "0.9.1",
     "testcheck": "^1.0.0-rc.2",
     "unexpected": "^10.29.0",
     "unexpected-check": "^1.12.0",
     "url-loader": "0.5.8",
     "webpack": "2.6.1",
+    "webpack-config-utils": "^2.3.0",
     "webpack-dev-server": "2.4.5",
+    "webpack-dev-utils": "^1.0.1",
     "webpack-manifest-plugin": "1.1.0",
+    "webpack-merge": "^4.1.0",
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
+    "prebuild:prod": "rimraf dist",
+    "build:prod": "webpack -p --env.prod --config webpack.config.babel.js",
     "testOld": "node scripts/test.js --env=jsdom",
     "watch": "npm run pack -- --watch",
-    "webpack": "webpack --module-bind='js=babel' src/index.js public/bundle.js",
     "lint": "eslint src/**/*.js webpack.config.js",
-    "pack": "webpack",
-    "dev": "webpack-dev-server",
+    "prepack": "rimraf dist",
+    "pack": "webpack --env.dev --config webpack.config.babel.js",
+    "dev": "webpack-dev-server --env.dev",
     "test": "NODE_ENV=test jest",
     "update-test": "npm run test -- -u",
     "cover": "npm run test -- --coverage",
-    "server-start": "NODE_ENV=server node server.js"
+    "server-start": "NODE_ENV=server node server.js",
+    "validate": "npm-run-all --parallel lint build:prod test",
+    "debug": "node --inspect --debug-brk ./node_modules/.bin/webpack --config webpack.config.babel.js",
+    "debug:dev": "npm run debug -- --env.dev",
+    "debug:prod": "npm run debug -- --env.prod",
+    "rm": "./node_modules/.bin/rimraf dist",
+    "presurge": "npm run build:prod",
+    "surge": "./scripts/surge"
   },
   "jest": {
     "collectCoverageFrom": [
