--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "case-sensitive-paths-webpack-plugin": "1.1.4",
     "chalk": "1.1.3",
     "css-loader": "^0.28.4",
+    "detox": "^5.1.3",
     "dotenv": "4.0.0",
     "enzyme": "^2.8.2",
     "enzyme-to-json": "^1.5.1",
