--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "jest": "20.0.3",
     "jest-serializer-enzyme": "1.0.0",
     "moxios": "0.4.0",
-    "nodemon": "1.11.0",
+    "nodemon": "^1.11.0",
     "npm-run-all": "^4.0.2",
     "object-assign": "4.1.1",
     "offline-plugin": "^4.8.1",
@@ -124,6 +124,7 @@
     "url-loader": "0.5.8",
     "webpack": "2.6.1",
     "webpack-config-utils": "^2.3.0",
+    "webpack-dashboard": "^0.4.0",
     "webpack-dev-server": "2.4.5",
     "webpack-dev-utils": "^1.0.1",
     "webpack-manifest-plugin": "1.1.0",
